--- a/index.html
+++ b/index.html
@@ -917,7 +917,7 @@
               </div>
               <!-- tools simgle item -->
             <div class="tools-cards__item d-flex grid-item-s animate-card-5"> 
-             < <div class="tools-cards__card"> 
+             <div class="tools-cards__card"> 
                <img class="tools-cards__icon animate-in-up" src="img/icons/gepete.svg" alt="Tools Icon"> 
                 <h6 class="tools-cards__caption animate-in-up">ChatGPT</h6> 
                 </div> 
