--- a/index.html
+++ b/index.html
@@ -190,6 +190,11 @@
                 </a>
               </li>
               <li class="socials-square__item">
+                <a class="socials-square__link btn" href="http://wa.me/524771786634" target="_blank">
+                  <i class="ph-bold ph-whatsapp-logo"></i>
+                </a>
+              </li>
+              <li class="socials-square__item">
                 <a class="socials-square__link btn" href="https://www.facebook.com/nancynsalazar" target="_blank">
                   <i class="ph-bold ph-facebook-logo"></i>
                 </a>
@@ -213,7 +218,7 @@
           </div>
           <div class="avatar__btnholder">
             <a class="btn btn-default btn-fullwidth btn-hover btn-hover-accent" href="#contact" target="_blank">
-              <span class="btn-caption">¡Trabajemos juntos!</span>
+              <span class="btn-caption">¡Contáctame!</span>
             </a>
           </div>
         </div>
@@ -463,7 +468,7 @@
                   <div class="about-info__item animate-in-up">
                     <h6>
                       <small class="top">Email</small>
-                      <a class="text-link-bold" href="mailto:hola@nancynsalazar.tech?subject=Contacto%20desde%20tu%website">hola@nancynsalazar.tech</a>
+                      <a class="text-link-bold" href="mailto:hola@nancynsalazar.tech?subject=Contacto%20desde%20tu%20website">hola@nancynsalazar.tech</a>
                     </h6>
                   </div>
                   <div class="about-info__item animate-in-up">
