--- a/index.html
+++ b/index.html
@@ -190,11 +190,6 @@
                 </a>
               </li>
               <li class="socials-square__item">
-                <a class="socials-square__link btn" href="http://wa.me/524771786634" target="_blank">
-                  <i class="ph-bold ph-whatsapp-logo"></i>
-                </a>
-              </li>
-              <li class="socials-square__item">
                 <a class="socials-square__link btn" href="https://www.facebook.com/nancynsalazar" target="_blank">
                   <i class="ph-bold ph-facebook-logo"></i>
                 </a>
@@ -217,8 +212,10 @@
             </ul>
           </div>
           <div class="avatar__btnholder">
-            <a class="btn btn-default btn-fullwidth btn-hover btn-hover-accent" href="#contact" target="_blank">
+            <a class="btn btn-default btn-fullwidth btn-hover btn-hover-accent" href=""https://wa.me/524771786634?text=
+        ¡Hola,%20Nancy!,%20quiero%20saber%20más%20sobre%20tu%20trabajo." target="_blank">
               <span class="btn-caption">¡Contáctame!</span>
+               <i class="ph-bold ph-whatsapp-logo"></i>
             </a>
           </div>
         </div>
