--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             </ul>
           </div>
           <div class="avatar__btnholder">
-            <a class="btn btn-default btn-fullwidth btn-hover btn-hover-accent" href=""https://wa.me/524771786634?text=
+            <a class="btn btn-default btn-fullwidth btn-hover btn-hover-accent" href="https://wa.me/524771786634?text=
         ¡Hola,%20Nancy!,%20quiero%20saber%20más%20sobre%20tu%20trabajo." target="_blank">
               <span class="btn-caption">¡Contáctame!</span>
                <i class="ph-bold ph-whatsapp-logo"></i>
