--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <div class="header__controls d-flex justify-content-end">
         <button id="color-switcher" class="color-switcher header__switcher btn" type="button" role="switch" aria-label="light/dark mode" aria-checked="true"></button>
         <a id="notify-trigger" class="header__trigger btn" href="https://wa.me/524771786634?text=
-        ¡Hola,%20Nancy!,%20quiero%20saber%20más%20sobre%20tu%20trabajo." target="_blank">
+        ¡Hola,%20Nancy!%20Me%20gustaría%20estar%20en%20contacto%20contigo%20por%20este%20medio.😃" target="_blank">
           <span class="trigger__caption">Contáctame</span>
           <i class="ph-bold ph-whatsapp-logo"></i>
         </a>
