--- a/index.html
+++ b/index.html
@@ -213,9 +213,8 @@
           </div>
           <div class="avatar__btnholder">
             <a class="btn btn-default btn-fullwidth btn-hover btn-hover-accent" href="https://wa.me/524771786634?text=
-        ¡Hola,%20Nancy!,%20quiero%20saber%20más%20sobre%20tu%20trabajo." target="_blank">
+        ¡Hola,%20Nancy!%20Me%20gustaría%20estar%20en%20contacto%20contigo%20por%20este%20medio.😃" target="_blank">
               <span class="btn-caption">¡Contáctame!</span>
-               <i class="ph-bold ph-whatsapp-logo"></i>
             </a>
           </div>
         </div>
@@ -459,7 +458,7 @@
                     <h6>
                       <small class="top">Móvil</small>
                       <a class="text-link-bold" href="https://wa.me/524771786634?text=
-                      ¡Hola,%20Nancy!,%20quiero%20saber%20más%20sobre%20tu%20trabajo.">+52 477-178-6634</a>
+                      ¡Hola,%20Nancy!%20Me%20gustaría%20estar%20en%20contacto%20contigo%20por%20este%20medio.😃">+52 477-178-6634</a>
                     </h6>
                   </div>
                   <div class="about-info__item animate-in-up">
@@ -1249,7 +1248,8 @@
                 <div class="col-12 col-md-4 contact-lines__data">
                   <p class="contact-lines__title animate-in-up">WhatsApp</p>
                   <p class="contact-lines__text animate-in-up">
-                    <a class="text-link-bold" href="http://wa.me/524771786634">+52 477 1786634</a>
+                    <a class="text-link-bold" href="https://wa.me/524771786634?text=
+        ¡Hola,%20Nancy!%20Me%20gustaría%20estar%20en%20contacto%20contigo%20por%20este%20medio.😃">+52 477-1786634</a>
                   </p>
                 </div>
                 <!-- data item -->
