Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <div class="avatar__block">
           <h6>
             <small class="top">Especialización:</small>
-            Tecnologías<br>de la Información
+            Tecnologías de la Información
           </h6>
         </div>
         <!-- data caption #2 -->
