Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
               </svg>
             </div>
             <div class="logo__caption">
-              <p>Nancy<br>Salazar</p>
+              <p>Nancy Salazar</p>
             </div>
           </div>
           <div class="avatar__image">
