--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
               </svg>
               <span>Portafolio</span>
             </p>
-            <h2 class="h2__title animate-in-up">Echa un vistazo a mis proyectos y a mi catálogo de conferencias y talleres</h2>
+            <h2 class="h2__title animate-in-up">Proyectos + Conferencias + Talleres</h2>
           </div>
           <!-- Content Block - H2 Section Title End -->
 
