--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                     <h5>Libro Cultura Digital II</h5>
                     <div class="card__tags d-flex flex-wrap">
                       <span class="rounded-tag opposite">Contenido educativo</span>
-                      <span class="rounded-tag opposite">Habilidades Digitales</span>
+                      <span class="rounded-tag opposite">Digital skills</span>
                     </div>
                     <p class="small">Colaboré como co-autora en el <a href="https://cengagelatam.editorialdc.com/libros/cultura-digital-ii/" target="_blank">libro "Cultura Digital II"</a> de la Editorial Cengage.
                     </p>
@@ -384,6 +384,7 @@
                   C11.8,7.9,10.2,8,9.1,9.1c-1,1-1.2,2.7-1.7,3.5C7,13.1,6,13.1,5.6,12.6z"/>
               </svg>
             </p>
+            <span>Portafolio</span>
             <h2 class="h2__title animate-in-up">Conferencias + Talleres</h2>
           </div>
           <!-- Content Block - H2 Section Title End -->
