--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                       <span class="rounded-tag">Workshops</span>
                     </div>
                     <p class="small">
-                      En <a href="#">este link</a> podrás ver los temas actualizados de mis conferencias, así como solicitar una cotización por la que sea de tu interés.
+                      En <a href="#">este link</a> podrás ver los temas actualizados de mis talleres, así como solicitar una cotización por la que sea de tu interés.
                     </p>
                   </figcaption>
                 </figure>
