--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                       <h4 class="cards__title animate-in-up">Gestión de<br>Proyectos TI</h4>
                       <div class="cards__tags d-flex flex-wrap animate-in-up">
                         <span class="rounded-tag tag-outline">Project Management</span>
-                        <span class="rounded-tag tag-outline">Product Management</span>
+                        <span class="rounded-tag tag-outline">Digital Products</span>
                       </div>
                       <p class="small cards__text animate-in-up">Lidero proyectos de desarrollo de software utilizando metodologías ágiles y tradicionales.</p>
                     </div>
