--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
                         <span class="rounded-tag tag-outline">Mentoría</span>
                         <span class="rounded-tag tag-outline">EdTech</span>
                       </div>
-                      <p class="small cards__text animate-in-up">Diseño y facilito talleres para guiar a personas en el mundo tech y de emprendimiento.
+                      <p class="small cards__text animate-in-up">Ayudo a personas a desarrollar habilidades tech y emprender con confianza.
                       </p>
                     </div>
                     <div class="cards__image d-flex">
