--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <span class="btn-caption">Mi trabajo</span>
                 <i class="ph-bold ph-squares-four"></i>
               </a>
-              <a class="btn mobile-vertical btn-default btn-hover btn-hover-outline-mobile animate-headline" href="https://drive.google.com/file/d/1Pt4W0MPDtwqxYvUEOUpBEQNi4rmB2eKC/view?usp=drive_link" target="_blank">
+              <a class="btn mobile-vertical btn-default btn-hover btn-hover-outline-mobile animate-headline" href="https://drive.google.com/file/d/1sOwuuXldXV9hWsliAxeOA45g5gyq_S82/view?usp=sharing" target="_blank">
                 <span class="btn-caption">Descarga mi CV</span>
                 <i class="ph-bold ph-download-simple"></i>
               </a>
@@ -498,7 +498,7 @@
                     Reconocida por <a href="https://www.linkedin.com/pulse/tecnolog%2525C3%2525ADa-e-innovaci%2525C3%2525B3n-los-cinco-especialistas-%3FtrackingId=LxggR1XPTeysCITAkvwN4g%253D%253D/?trackingId=LxggR1XPTeysCITAkvwN4g%3D%3D" target="_blank">LinkedIn como una "Top Voice" en el 2022</a> en  temas de Tecnología e Innovación, también ha sido nombrada una de las <a href="https://emprendedor.com/los-100-emprendedores-mas-inspiradores-de-mexico/" target="_blank">100 emprendedoras más inspiradoras del país</a> por la <a href="https://asem.mx/" target="_blank">Asociación de Emprendedores de México (ASEM)</a>. Su experiencia la ha llevado a ser conferencista internacional y TEDx Speaker, contribuyendo significativamente al ecosistema tecnológico y de innovación en Latinoamérica.
                   </p>
                   <div class="btn-group about-descr__btnholder animate-in-up">
-                    <a class="btn mobile-vertical btn-default btn-hover btn-hover-accent" href="https://drive.google.com/file/d/1Pt4W0MPDtwqxYvUEOUpBEQNi4rmB2eKC/view?usp=drive_link" target="_blank">
+                    <a class="btn mobile-vertical btn-default btn-hover btn-hover-accent" href="https://drive.google.com/file/d/1sOwuuXldXV9hWsliAxeOA45g5gyq_S82/view?usp=sharing" target="_blank">
                       <span class="btn-caption">Descarga mi CV</span>
                       <i class="ph-bold ph-download-simple"></i>
                     </a>
