--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </div>
           </div>
           <div class="avatar__image">
-            <img src="img/avatars/NancySalazar_Foto2.png" alt="Nancy N. Salazar - Personal Portfolio & Resume">
+            <img src="img/avatars/NancySalazar_Foto2.jpg" alt="Nancy N. Salazar - Personal Portfolio & Resume">
           </div>
         </div>
         <!-- data caption #1 -->
